--- a/app/views/education/_symtom.html.erb
+++ b/app/views/education/_symtom.html.erb
@@ -1,46 +1,58 @@
 
-<div class="vene-mid">
-        <div class="vene-mid-1">
-            <div>
-                <a href="">증상 별로 보기</a>
-            </div>
-        </div>
-    
-        <div class="vene-mid-2">
-            <div>
-                <a href="">이름 별로 보기</a>
-            </div>
-        </div>
-    </div>
 
     <div class="vene-bottom">
-        <div class="imjil">
-            <h1 style="bold";>임질</h1> <br>
-            <h2>아랫배 통증, 소변 시 불쾌감 등</h2><br>
-            <h2>‘나이지리나 고노리’라는 임균에 의해 감염 된다.
-            빠르면 2~3일, 늦어도 7일 정도면 증상이 나타나는 급성 염증이다. 대부분의 여성은 임질에 감염 되어도 증상이 거의 없거나 뚜렷하지 않아 그냥 지나치기 쉬운데, 
-            보통 냉이 심해지고 아랫배 통증이나 소변을 볼 때 불쾌감을 호소한다.
-            임질은 어느 시기에나 나쁜 영향을 미칠 수 있다.
-            염증이 자궁을 거쳐 난관, 난소에 이르면 난관염과 난소염을 일으켜 불임증이나 자궁 외 임신, 조산 등의 원인이 되기도 한다.
-            특히 분만 때 아기가 산도를 통해 나오다가 모체의 분비물이 신생아의 눈에 들어가면 신생아 결막염이 되거나 실명의 위험이 있다.</h2>
+        <div class="imjil vene-bottom-content">
+            <div class="vene-bottom-box-top">
+            <h1>01</h1>
+            </div>
+            <img src="/assets/x.svg" style="position:absolute;top: 1.5vh;right:2vh;">
+            <img src="/assets/mini.svg" style="position:absolute;top: 1.4vh;right:5vh;width:2.4vh;height:2.4vh;">
+            <div class="vene-bottom-box">
+            <h1 style="bold">임질</h1>
+                <h2 class="vene1">증상 : 아랫배 통증, 소변 시 불쾌감 등</h2>
+                <h2>‘나이지리나 고노리’라는 임균에 의해 감염 된다.
+                빠르면 2~3일, 늦어도 7일 정도면 증상이 나타나는 급성 염증이다. 대부분의 여성은 임질에 감염 되어도 증상이 거의 없거나 뚜렷하지 않아 그냥 지나치기 쉬운데, 
+                보통 냉이 심해지고 아랫배 통증이나 소변을 볼 때 불쾌감을 호소한다.
+                임질은 어느 시기에나 나쁜 영향을 미칠 수 있다.
+                염증이 자궁을 거쳐 난관, 난소에 이르면 난관염과 난소염을 일으켜 불임증이나 자궁 외 임신, 조산 등의 원인이 되기도 한다.
+                특히 분만 때 아기가 산도를 통해 나오다가 모체의 분비물이 신생아의 눈에 들어가면 신생아 결막염이 되거나 실명의 위험이 있다.</h2>
+            </div>
         </div>
 
-        <div class="maedok">
-            <h1 style="bold">매독</h1><br>
-            <h2>사마귀, 발목 부음 등</h2><br>
-            <h2>매독균은 1905년 호프만이 ‘스피로헤타’라는 병원체를 발견함으로써 세상에 알려졌다. 매독의 증상은 매우 다양하며, 성병 중에서 가장 위험한 질병이다. 성교 뿐 아니라 격렬한 키스만으로도 전파될 수 있고, 최근 항생제 남용으로 잠복 매독이 많아 감염 사실을 모르는 경우도 있다. 매독에 감염되면 콩알만한 사마귀가 몸에 생기거나 발목이 붓는 등의 증상이 나타난다. 매독은 임신 초기에 페니실린 주사를 맞으면 대부분 치료된다. 단 치료를 받았더라도 재발할 수 있으니 임신 중기와 후기에 다시 검사를 받는 것이 좋다. 임산부가 매독에 걸리더라도 약 50%의 태아만이 태반을 통해 감염되며, 태반이 완성되는 임신 16주 이전에 치료하면 태아에게 감염되는 것을 막을 수 있다. 드물기는 하지만 일단 태아에게 감염되면 임신 초기에는 유산 또는 사산이 될 가능성이 높다. 그리고 임신 후기에는 선천성 매독아가 되어 미숙아로 태어나거나 출생 후 수년이 지나 각막염, 청각장애, 머리 기형 등의 증상이 나타날 수 있다.</h2>
+        <div class="maedok vene-bottom-content">
+         <div class="vene-bottom-box-top">
+         <h1>02</h1>
+         </div>
+           <img src="/assets/x.svg" style="position:absolute;top: 1.5vh;right:2vh;">
+            <img src="/assets/mini.svg" style="position:absolute;top: 1.4vh;right:5vh;width:2.4vh;height:2.4vh;">
+            <div class="vene-bottom-box">
+                <h1  class="vene2">매독</h1>
+                <h2>증상 : 사마귀, 발목 부음 등</h2>
+                <h2>매독균은 1905년 호프만이 ‘스피로헤타’라는 병원체를 발견함으로써 세상에 알려졌다. 매독의 증상은 매우 다양하며, 성병 중에서 가장 위험한 질병이다. 성교 뿐 아니라 격렬한 키스만으로도 전파될 수 있고, 최근 항생제 남용으로 잠복 매독이 많아 감염 사실을 모르는 경우도 있다. 매독에 감염되면 콩알만한 사마귀가 몸에 생기거나 발목이 붓는 등의 증상이 나타난다. 매독은 임신 초기에 페니실린 주사를 맞으면 대부분 치료된다. 단 치료를 받았더라도 재발할 수 있으니 임신 중기와 후기에 다시 검사를 받는 것이 좋다. 임산부가 매독에 걸리더라도 약 50%의 태아만이 태반을 통해 감염되며, 태반이 완성되는 임신 16주 이전에 치료하면 태아에게 감염되는 것을 막을 수 있다. 드물기는 하지만 일단 태아에게 감염되면 임신 초기에는 유산 또는 사산이 될 가능성이 높다. 그리고 임신 후기에는 선천성 매독아가 되어 미숙아로 태어나거나 출생 후 수년이 지나 각막염, 청각장애, 머리 기형 등의 증상이 나타날 수 있다.</h2>
+            </div>
         </div>
-
-        <div class="herpes">
-           <h1 style="bold">헤르페스</h1><br>
-           <h2>작은 물집, 딱지 등</h2><br>
+        <%# <div class="herpes vene-bottom-content">
+         <div class="vene-bottom-box-top">
+         <h1>03</h1>
+         </div>
+           <img src="/assets/x.svg" style="position:absolute;top: 1.5vh;right:2vh;">
+            <img src="/assets/mini.svg" style="position:absolute;top: 1.4vh;right:5vh;width:2.4vh;height:2.4vh;">
+         <div class="vene-bottom-box">
+           <h1 class="vene3">헤르페스</h1>
+           <h2>증상 : 작은 물집, 딱지 등</h2>
            <h2>성관계를 통해 전염되는 헤르페스에 감염되면 성기 주위에 조그만 물집이 여러 개 나타난다. 작은 물집은 1,2주 후 딱지가 앉고 2,4주 후면 자연 치유된다. 하지만 헤르페스는 일단 감염이 되면 재발 가능성이 높아 속수무책이다. 예방주사도 없다. 헤르페스 바이러스가 신경절 내에 숨어 있다가 스트레스, 피로, 외상 월경 임신, 자외선 조사, 고열 등의 인자들에 의해 다시 재발한다. 이 때 항바이러스제를 투여해 바이러스 억제하는 치료는 가능하지만 아직까지 뾰족한 완치법이 없다.</h2>
         </div>
-
-        <div class="gon">
-            <h1 style="bold">곤지름</h1><br>
-            <h2>성기 주변 피부병</h2><br>
+        </div> %>
+        <div class="gon vene-bottom-content">
+         <div class="vene-bottom-box-top">
+         <h1>03</h1>
+         </div>
+         <img src="/assets/x.svg" style="position:absolute;top: 1.5vh;right:2vh;">
+            <img src="/assets/mini.svg" style="position:absolute;top: 1.4vh;right:5vh;width:2.4vh;height:2.4vh;">
+            <div class="vene-bottom-box">
+            <h1 class="vene4">곤지름</h1>
+            <h2>증상 : 성기 주변 피부병</h2>
             <h2>곤지름(성기사마귀)은 인유두종 바이러스(HPV)감염으로 인해 발생하며, 헤르페스와 마찬가지로 손이나 발 등 다른 부위에도 발생할 수 있지만 성기 주변에 생기는 경우에만 남자성병종류에 해당한다. 곤지름은 다른 종류의 피부과 질환과는 달리 바이러스 감염으로 발생하는 것이니만큼 전염성이 매우 강하다. 곤지름을 유발하는 인유두종 바이러스는 음경암, 외음부암, 질암, 자궁경부암 등을 유발할 수 있으니 예방과 빠른 치료가 매우 중요합니다.</h2>
+            </div>
         </div>
     </div>
-</div>
