--- a/app/views/education/venereal.html.erb
+++ b/app/views/education/venereal.html.erb
@@ -10,12 +10,12 @@
         </div>
         <div class=vene-subtitle>
             <h1>나와는 거리가 멀어보이는 성병! 지금 당신과 함께 하고 있을 수도 있습니다.<br>
-            마우스를 올려보세요.
+            마우스를 올려보세요.</h1>
         </div>
 
         <div class="vene-select">
-            <h1 class="render-vene1">성별 별로 보기</h1>
-            <h1>이름 별로 보기</h1>
+            <h1 class="render-vene1">성별로 보기</h1>
+            <h1>이름별로 보기</h1>
         </div>
     </div>
       
@@ -23,6 +23,10 @@
     
       <%= render "symtom" %>    
        
+     <div class="education-gend">
+        <img src="/assets/whale1.gif" style="width: 400px; height: 400px;">
+        <h1>콘텐츠 준비중</h1>
+    </div>  
 </div> 
 
 
