--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -123,7 +123,7 @@
         <h1>Point !</h1>
     </div>
     <h1>성에 대한 우리의 지식과 생각</h1>
-    <h2>같을 수도 다를 수도 틀릴 수도 있다는 것!<h2>
+    <h2>같을 수도 다를 수도 틀릴 수도 있다는 것!</h2>
     <div style="width: 4vh;border-bottom:2px solid rgb(103, 28, 107);"></div>
 </div>
 <div class="main-5">
