--- a/app/assets/stylesheets/venereal.scss
+++ b/app/assets/stylesheets/venereal.scss
@@ -10,7 +10,7 @@
 
 .vene-top {
     background: #294052;
-    background: #294052 url("빗금.png") 0 0 repeat;
+    // background: #294052 url("빗금.png") 0 0 repeat;  
     padding-top: 9vh;
     background-size: 30% 50%;
     text-align: center;
@@ -53,60 +53,67 @@
     
 }
 
-.vene-bottom{
+.vene-bottom {
     display:flex;
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    margin-top: 3%;
-    margin-left: 20%;
-    margin-right: 20%;
+  
+    width: 130vh;
+    position: relative;
+    top: -5vh;
+    padding:10vh;
+    border-radius: 0.4vh;
+    
+    img {
+        width: 2vh;
+        height: 2vh;
+       
+        border-radius: 0.5vh;
+    }
 
-    .imjil{
-        margin-bottom: 55px;
-        border-top-color: #ed4f3e;
-        border-top-style: solid;
-        border-bottom-color: #fab844;
-        border-bottom-style: solid;
-        border-bottom-width: thin;
-        border-top-width: thin;
-        padding-top: 20px;
-        padding-bottom: 20px;
+    .vene1 {
+
     }
-    .maedok{
-        margin-bottom: 55px;
-        border-top-color: #fab844;
-        border-top-style: solid;
-        border-bottom-color: #ed4f3e;
-        border-bottom-style: solid;
-        border-bottom-width: thin;
-        border-top-width: thin;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-    .herpes{
-        margin-bottom: 55px;
-        border-top-color: #ed4f3e;
-        border-top-style: solid;
-        border-bottom-color: #fab844;
-        border-bottom-style: solid;
-        border-bottom-width: thin;
-        border-top-width: thin;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-    .gon{
-        margin-bottom: 55px;
-        margin-bottom: 55px;
-        border-top-color: #fab844;
-        border-top-style: solid;
-        border-bottom-color: #ed4f3e;
-        border-bottom-style: solid;
-        border-bottom-width: thin;
-        border-top-width: thin;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
+    // .imjil {
+    //     border-top-color: #ed4f3e;
+    //     border-top-style: solid;
+    //     border-bottom-color: #fab844;
+    //     border-bottom-style: solid;
+    //     border-bottom-width: thin;
+    //     border-top-width: thin;
+       
+    // }
+    // .maedok{
+    
+    //     border-top-color: #fab844;
+    //     border-top-style: solid;
+    //     border-bottom-color: #ed4f3e;
+    //     border-bottom-style: solid;
+    //     border-bottom-width: thin;
+    //     border-top-width: thin;
+     
+    // }
+    // .herpes{
+        
+    //     border-top-color: #ed4f3e;
+    //     border-top-style: solid;
+    //     border-bottom-color: #fab844;
+    //     border-bottom-style: solid;
+    //     border-bottom-width: thin;
+    //     border-top-width: thin;
+       
+    // }
+    // .gon{
+        
+    //     border-top-color: #fab844;
+    //     border-top-style: solid;
+    //     border-bottom-color: #ed4f3e;
+    //     border-bottom-style: solid;
+    //     border-bottom-width: thin;
+    //     border-top-width: thin;
+      
+    // }
 
     #imjil:hover, #maedok:hover, #herpes:hover, #gon:hover{
         background-color: rgba(255, 255, 255, 0.24) url("main-4-back.png") repeat repeat;
@@ -117,6 +124,53 @@
     }
 
 
+}
+
+.vene-bottom-content {
+    display: flex;
+    position: relative;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 20vh;
+    padding: 4vh 0 4vh 0 ;
+    border-radius: 0.7vh;
+    background-color: #fff9f2;
+    margin-bottom: 15vh;
+    box-shadow: 1vh 1vh 3vh rgba(0, 0, 0, 0.39);
+     h1 {
+        font-size: 4vh;
+
+     }
+     h2 {
+         margin-top:2vh;
+         text-align:left;
+         line-height: 240%;
+        font-size: 2vh;
+     }
+     
+ }
+
+.vene-bottom-box {
+    width: 90vh;
+   
+}
+
+.vene-bottom-box-top {
+    display: flex;
+   justify-content: center;
+   align-items: center;
+    width: 15vh;
+    height: 15vh;
+    position:absolute;
+    top: -7.5vh;
+    border-radius: 50%;
+    left: -7.5vh;
+    background-color: #447294;
+    box-shadow: 0.5vh 0.5vh 1.5vh rgba(0, 0, 0, 0.411);
+    h1 {
+        color: white;
+        font-size: 5vh;
+    }
 }
 
 .vene-index {
@@ -140,6 +194,26 @@
         border-radius: 0.3vh;
         box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.226);
     }
+}
+
+
+.human-shadow {
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0vh 0vh 4vh rgba(0, 0, 0, 0.212);
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.329);
+    opacity: 0;
+    z-index: 4;
+    transition: opacity 0.3s linear 0s;
+   
+}
+
+.vene-human {
+    display:flex;
+   justify-content: center;
+    margin-top: 10vh;
+ 
 }
 
 .vene-man, .vene-woman {
@@ -174,33 +248,6 @@
     
 }
 
-
-.human-shadow {
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0vh 0vh 4vh rgba(0, 0, 0, 0.212);
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.329);
-    opacity: 0;
-    z-index: 4;
-    transition: opacity 0.3s linear 0s;
-   
-}
-
-
-.human-shadow:hover  { 
-    opacity: 1;
-   
-}
-.human-text:hover {
-     opacity: 1;
-}
-.vene-human {
-    display:flex;
-   justify-content: center;
-    margin-top: 10vh;
- 
-}
 .vene-woman {
    top: -30vh;
     img {
@@ -212,6 +259,7 @@
         z-index:1;
     }
 }
+
 .vene-man {
     top: -30vh;
     img {
@@ -222,6 +270,21 @@
         z-index: 1;
         left: 0;
     }
+}
+
+
+.vene-man:hover .human-text, .vene-woman:hover .human-text  { 
+    opacity: 1;
+   
+}
+
+
+.vene-man:hover .human-shadow, .vene-woman:hover .human-shadow   { 
+    opacity: 1;
+   
+}
+.human-text:hover {
+     opacity: 1;
 }
 
 .vene-human-box {
@@ -245,12 +308,19 @@
     left: 0;
    
 }
-
+.vene-circle {
+    width: 10vh;
+    height: 10vh;
+    top: 40vh;
+    left: 33vh;
+    border-radius:50%;
+    border: 0.4vh solid rgb(0, 0, 0);
+    position: absolute;
+}
 
 .vene-human-see-pic {
 width: 75vh;
 height: 60vh;
-
 border-radius: 0.4vh 0 0vh 0.4vh ;
 position: absolute;
 top: -30vh;
@@ -301,5 +371,20 @@ img {
         margin-top: 3vh;
         font-size: 2.2vh;
         color:white;
+    }
+}
+
+
+.education-gend {
+    width: 100%;
+    height: 100vh;
+    background-color: #1874d2;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+    h1 {
+        color: white;
+        font-weight: 400;
     }
 }
