--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,20 +5,17 @@
     <%= csrf_meta_tags %>
     
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
     <%# <script src="https://apis.google.com/js/platform.js" async defer></script> %>
-  
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-     <meta name="google-signin-client_id" content="336256666389-timddavdks14cnn1jhqv6qqpcjuo4s37.apps.googleusercontent.com">
+    
+    <meta name="google-signin-client_id" content="336256666389-timddavdks14cnn1jhqv6qqpcjuo4s37.apps.googleusercontent.com">
     <link href='https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" type="image/x-icon" href="/assets/peach.ico" />
    
-    
-
-  </head>
-  <style>
+     <style>
     @media only screen and (min-width:0) {
         .nav, .main-1, .main-2, .main-3, .main-4, .main-4-0, .main-4-1, .main-5 {
             width: 140vh;
@@ -37,6 +34,9 @@
     }
    
   </style>
+
+  </head>
+ 
   <body>
     <div class="nav">
       <div class="logo">
@@ -45,9 +45,9 @@
      
       </div>
       <div class="nav-menu-box">
-          <a class="nav-menu" href="/">
-            <img src="/assets/main.svg">
-            <h1>Main</h1>
+          <a class="nav-menu" href="/" style="top:-0.2vh;height: 6.5vh;">
+            <img src="/assets/main.svg" >
+            <h1 style="top:-0.7vh">Main</h1>
           </a>
           <a class="nav-menu" href="/education/index">
             <img src="/assets/book.svg">
