--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@
 
 <div class="main-2">
     <div class="pursuit">
-            <div style="display:flex;"><h1 style="font-size: 35px;">성교육</h1><img src="think.svg" alt="" style="margin-left:7px;width:40px;height:40px;"></div><h1 style="font-size: 30px;font-weight:400;font-weight: 1000;margin-top: 3px;">생각하면</h1><div style="display:flex;margin-top: 10px"><h1 style="font-size: 30px;color: red;">떠</h1><h1 style="font-size: 30px;color: red;">오르는 것?</h1>
+            <div style="display:flex;"><h1 style="font-size: 35px;">성교육</h1><img src="/assets/think.svg" alt="" style="margin-left:7px;width:40px;height:40px;"></div><h1 style="font-size: 30px;font-weight:400;font-weight: 1000;margin-top: 3px;">생각하면</h1><div style="display:flex;margin-top: 10px"><h1 style="font-size: 30px;color: red;">떠</h1><h1 style="font-size: 30px;color: red;">오르는 것?</h1>
             </div>
             <div>
                 <div style="width: 90%;height:2.5px;background-color: rgba(170, 170, 170, 0.507);margin-top: 50%;display:flex;">
