--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     <div class="nav">
       <div class="logo">
         <a href="/"><img src="/assets/성교한글1.svg" style="height: 15vh;width: auto;"></a>
-        <h2>性스러운 가르침</h2>
+        <a href="/" class="small">性스러운 가르침</a>
      
       </div>
       <div class="nav-menu-box">
