--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
             여러분과 같은 사람을 만나고<br>
             서로 알아갈 수 있는 기회입니다!<br>
         </h2>
-        <img src="/assets/공감start.png" alt="" style="width: 40vh;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
+        <img src="/assets/공감start.png" alt="" style="width: 40vh;height: auto;margin-top:2vh;cursor:pointer" onclick="movequiz()">
         <img src="/assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:relative;top:-3vh;">
         <img src="/assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:relative;top: -6vh">
     </div>
@@ -145,7 +145,7 @@
                             <h1>Jang Young Jae</h1>
                             <div style="display:flex; flex-direction:row; align-items:center;">
                                 <h1>10시간 전</h1>
-                                <img src="/assets/earth.svg" alt="" style="width:15px; height:15px; margin-left:6px; position:relative; top:2px;">
+                                <img src="/assets/earth.svg" alt="" style="width:2vh; height:2vh; margin-left:0.3vh; position:relative; top:0.3vh;">
                             </div>   
                         </div>
                     </div>
