--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -35,7 +35,42 @@
             <h1>데이트</h1>
           </div>
         </div>
+        <div class="post-index-celebrate" style="height: 12vh;">
+          
+          <div class="post-index-celebrate-content" > 
+            <h1>Developers</h1>
+            <h2>Team : KU 성애</h2>
+          </div>
+        </div>
         <div class="post-index-celebrate">
+          <img src="/assets/banana.gif">
+          <div class="post-index-celebrate-content"> 
+            <h1>Choi yeoun hyee</h1>
+            <h2>She is awesome!</h2>
+          </div>
+        </div>
+          <div class="post-index-celebrate">
+          <img src="/assets/banana.gif">
+          <div class="post-index-celebrate-content"> 
+            <h1>Choi yeoun hyee</h1>
+            <h2>She is awesome!</h2>
+          </div>
+        </div>
+          <div class="post-index-celebrate">
+          <img src="/assets/banana.gif">
+          <div class="post-index-celebrate-content"> 
+            <h1>Choi yeoun hyee</h1>
+            <h2>She is awesome!</h2>
+          </div>
+        </div>
+          <div class="post-index-celebrate">
+          <img src="/assets/banana.gif">
+          <div class="post-index-celebrate-content"> 
+            <h1>Choi yeoun hyee</h1>
+            <h2>She is awesome!</h2>
+          </div>
+        </div>
+          <div class="post-index-celebrate">
           <img src="/assets/banana.gif">
           <div class="post-index-celebrate-content"> 
             <h1>Choi yeoun hyee</h1>
@@ -69,12 +104,19 @@
             <h2>She is awesome!</h2>
           </div>
         </div>
+        <div class="post-index-menu">
+          <div class="post-index-celebrate-content"> 
+            <h1>Choi yeoun hyee</h1>
+            <h2>She is awesome!</h2>
+          </div>
+        </div>
          <div class="post-index-menu">
           <div class="post-index-celebrate-content"> 
             <h1>Choi yeoun hyee</h1>
             <h2>She is awesome!</h2>
           </div>
         </div>
+        
         
   </div>
   <div class="post-index-container">
