--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -126,7 +126,7 @@
     padding: 0 2vh 4vh 2vh;
     left: 23vw;
     width:70vw;
-    min-height: 150vh;
+    min-height: 116vw;
     background-color: rgb(248, 248, 248);
     border-radius:0.5vh;
     box-shadow: 3vh 4vh 8vh rgba(19, 1, 1, 0.342);
