--- a/app/assets/stylesheets/venereal.scss
+++ b/app/assets/stylesheets/venereal.scss
@@ -58,10 +58,10 @@
     justify-content: center;
     text-align: center;
     flex-direction: column;
-  
+  margin-bottom: -100vh;
     width: 130vh;
     position: relative;
-    top: -5vh;
+    top: -45vh;
     padding:10vh;
     border-radius: 0.4vh;
     
@@ -127,6 +127,7 @@
 }
 
 .vene-bottom-content {
+    // overflow:hidden;
     display: flex;
     position: relative;
     justify-content: space-around;
@@ -135,7 +136,7 @@
     padding: 4vh 0 4vh 0 ;
     border-radius: 0.7vh;
     background-color: #fff9f2;
-    margin-bottom: 15vh;
+    margin-top: 12vh;
     box-shadow: 1vh 1vh 3vh rgba(0, 0, 0, 0.39);
      h1 {
         font-size: 4vh;
@@ -180,8 +181,10 @@
 
 .vene-select {
     display: flex;
+    z-index:10;
+    position: relative;
     margin-top:4vh;
-    h1 {
+    a {
         text-align: center;
         width: 20vh;
         font-size: 2vh;
@@ -189,6 +192,7 @@
         padding-top:1.7vh;
         margin:2vh;
         background-color :#447294;
+        // background-color :#a1fad3;
         font-weight: 300;
         color:white;
         border-radius: 0.3vh;
