--- a/app/views/education/_human.html.erb
+++ b/app/views/education/_human.html.erb
@@ -28,4 +28,10 @@
         </div>
     </div>
 </div>
+   
+<div class="education-gend">
+    <img src="/assets/whale1.gif" style="width: 400px; height: 400px;">
+    <h1>콘텐츠 준비중</h1>
+</div> 
+
 </div>
