--- a/app/views/education/genderequality.html.erb
+++ b/app/views/education/genderequality.html.erb
@@ -38,7 +38,7 @@
             <h1>연애 시뮬레이션 게임</h1>
             <h2>게임을 통해 젠더평등 배워보자</h2>
             <h3>Made By @KU Seung Aae</h3>
-            <h4> parctie needed!parctie needed!</h4>
+            <h4>@ Copyright : 네이버 웹툰 연놈</h4>
             </div>
             <img src="/assets/share.svg" style="position:absolute;top: 1.5vh;right:2vh;">
             <img src="/assets/세팅.svg" style="position:absolute;top: 2vh;right:7vh;width:3vh;height:3vh">
@@ -220,7 +220,7 @@
              $(".game-back2").css({"display": "block"});
              $(".student3").css({"left": "70%"});
             $(".student3").css({"display": "block"});
-                  $(".student3-1").css({"display":"none"})
+                  $(".student3-1").css({"display":"block"})
            $(".game-back3").css({"display": "none"});
            $(".talk5").css({"display":"block"})
             $(".talk4").css({"display":"none"})
