--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,15 @@
     <title>성교 </title>
     <%= csrf_meta_tags %>
     
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  
     
     <%# <script src="https://apis.google.com/js/platform.js" async defer></script> %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-    
+     <link href='https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <meta name="google-signin-client_id" content="336256666389-timddavdks14cnn1jhqv6qqpcjuo4s37.apps.googleusercontent.com">
-    <link href='https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css' rel='stylesheet' type='text/css'>
+   
     <link rel="shortcut icon" type="image/x-icon" href="/assets/peach.ico" />
    
      <style>
@@ -40,7 +40,7 @@
   <body>
     <div class="nav">
       <div class="logo">
-        <a href="/"><img src="/assets/성교한글1.svg" style="height: 15vh;width: auto;"></a>
+        <a href="/"><img src="/assets/성교한글1.svg" style="height: 15vh;width: auto;top:0.3vh;position:relative;"></a>
         <a href="/" class="small">性스러운 가르침</a>
      
       </div>
