--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -201,7 +201,7 @@
 
 <script>
 
-
+$(".mCSB_container").css({"position":"absolute"})
 function movetop() {
     $('html, body').animate({scrollTop : 0}, 900);
 }
