--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,6 +35,7 @@
     <div class="post-show-content">
       <h1><%= @post.title %></h1>
       <h2><%= @post.content %></h2>
+      <h2><%= @post.hashtag %></h2>
        <input type="hidden" value='1'>
      
         <div  class="like-box">
