--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,6 +15,9 @@
     <div class="post-edit-title" >
       <%= form.text_field :title, id: :post_title %>
     </div>
+    <div class="post-edit-title" >
+      <%= form.text_field :hashtag, id: :post_hashtag %>
+    </div>
     <div class="post-edit-title" style="display:flex;flex-direction:column;align-items:center;;">
       <%= form.text_area :content, id: :post_content %>
     <%= form.submit %>
