--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,15 +24,15 @@
 
 <div class="main-2">
     <div class="pursuit">
-            <div style="display:flex;"><h1 style="font-size: 35px;">성교육</h1><img src="/assets/think.svg" alt="" style="margin-left:7px;width:40px;height:40px;"></div><h1 style="font-size: 30px;font-weight:400;font-weight: 1000;margin-top: 3px;">생각하면</h1><div style="display:flex;margin-top: 10px"><h1 style="font-size: 30px;color: red;">떠</h1><h1 style="font-size: 30px;color: red;">오르는 것?</h1>
+            <div style="display:flex;"><h1 style="font-size: 4vh;">성교육</h1><img src="/assets/think.svg" alt="" style="margin-left:0.5vh;width:4.5vh;height:4.5vh;"></div><h1 style="font-size: 3vh;font-weight:300;font-weight: 500;margin-top: 0.3vh;">생각하면</h1><div style="display:flex;margin-top: 0.4vh"><h1 style="font-size: 3.5vh;color: red;">떠</h1><h1 style="font-size: 3.5vh;color: red;">오르는 것?</h1>
             </div>
             <div>
                 <div style="width: 90%;height:2.5px;background-color: rgba(170, 170, 170, 0.507);margin-top: 50%;display:flex;">
-                        <div style="width:5px;height:5px;background-color:white;border: 2px solid rgb(226, 4, 4);border-radius:50%;position:relative;top:-3px;left:20px;" ></div>
-                        <div style="width:20px;height:2px;background-color:rgb(228, 0, 0);position:absolute"></div>
+                        <div style="width:0.9vh;height:0.9vh;background-color:white;border: 2px solid rgb(226, 4, 4);border-radius:50%;position:relative;top:-0.3vh;left:3vh;" ></div>
+                        <div style="width:3vh;height:0.2vh;background-color:rgb(228, 0, 0);position:absolute"></div>
                 </div>
 
-                <h1 style="margin-top:15px;font-size:15px;font-weight: 300;">남은 시간 1:50:12</h1>
+                <h1 style="margin-top:1.5vh;font-size:1.7vh;font-weight: 300;">남은 시간 1:50:12</h1>
             </div>
     </div>
     <div class="main-2-container">
