--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -28,13 +28,14 @@
 .main-1 h1 {
     font-size:  4vh;
     margin-top:2vh;
+    font-weight: 400;
 }
 
 .main-1 h2 {
     margin-top: 2vh;
-    font-size:  2vh;
-    line-height: 200%;
-    font-weight: 200;
+    font-size:  2.5vh;
+    line-height:  4vh;
+    font-weight: 300;
     text-align: center;
     color: rgb(255, 255, 255);
     text-shadow: 0 0 3px rgb(110, 110, 110);
@@ -70,8 +71,8 @@
 }
 
 .pursuit {
-    width: 12%;
-    height:50%;
+    width: 23vh;
+    height:25vh;
     
 }
 
