--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,6 +1,5 @@
 .user {
-    width: 100%;
-    height: 100%;
+   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,6 +13,7 @@
     overflow: hidden;
     position: absolute;
     left: 14vw;
+    top: 10vw;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -42,9 +42,9 @@
 .user-profile-img {
     position: relative;
     z-index:1;
-    margin-bottom: 2vh;
-    width: 10vh;
-    height: 10vh;
+    margin-bottom: 1vw;
+    width: 2vw;
+    height: 2vw;
     border-radius: 50%;
 }
 
@@ -55,20 +55,20 @@
     justify-content: center;
     height:35%;
     width: 100%;
-    padding:0 2vh 2vh 5vh;
+    padding:0 2vw 1vw 2vw;
     z-index:1;
     h1 {
-        font-size: 5vh;
-        margin-bottom: 1vh;
+        font-size: 3vw;
+        margin-bottom: 0.5vw;
         color:white;
     }
     h2 {
-        font-size: 2.5vh;
+        font-size: 1.5vw;
         color:white;
     }
     h3 {
-        margin-top:0.7vh;
-        font-size: 1.5vh;
+        margin-top:0.5vw;
+        font-size: 1.1vw;
         color:white;
     }
 
@@ -77,15 +77,15 @@
 .user-profile-content-box {
     width: 100%;
     position: relative;
-    padding-bottom: 3vh;
-    padding-left: 2.5vh;
-    padding-right: 2.5vh;
+    padding-bottom: 1.5vw;
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
     z-index:1;
     display:Flex;
     justify-content: space-between; 
     .like {
-        width: 4.5vh;
-        height: 4.5vh;
+        width: 2.5vw;
+        height: 2.5vw;
         border:0.2vh solid rgba(255, 255, 255, 0.24);
         border-radius: 50%;
         display: flex;
@@ -95,23 +95,23 @@
         img {
             position: relative;
             top:0.5vh;
-            width: 3vh;
-            height:3vh;
+            width: 2vw;
+            height:2vw;
         }
     }
 }
 .modi {
-    width: 20vh;
-    height: 4.5vh;
+    width: 10vw;
+    height: 2.5vw;
     background: rgb(196, 104, 127);
-    border-radius: 3vh;
+    border-radius: 3vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     box-shadow: 0.5vh 0.5vh 1vh rgba(0, 0, 0, 0.103);
     h1 {
-        font-size: 2.5vh;
+        font-size: 1.3vw;
         color:white;
         font-weight: 300;
     }
@@ -121,11 +121,12 @@
 .user-profile-action {
     width: 50vw;
     height: 30vw;
-    border-radius: 0.5vh;
+    border-radius: 0.5vw;
     overflow: hidden;
     position: absolute;
     right: 14vw;
     display:flex;
+    top: 10vw;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
@@ -140,7 +141,7 @@
     overflow: hidden;
     position: absolute;
     right: 14vw;
-    top:45vw;
+    top:44vw;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -157,7 +158,7 @@
     overflow: hidden;
     position: absolute;
     left: 14vw;
-    top:45vw;
+    top:44vw;
     display:flex;
     flex-direction: column;
     align-items: center;
