--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -64,7 +64,7 @@
             <div id="disease" class="education-main-box">
                 
                 <img src="/assets/고민3.png">
-                <button>피임법 알아보기!</button>
+                <a href="/education/contraception"><button>피임법 알아보기!</button></a>
             </div>
         </div>
        <div id="pin-2" class="airpin">
