--- a/app/views/education/venereal.html.erb
+++ b/app/views/education/venereal.html.erb
@@ -5,7 +5,12 @@
 
 <div class="venereal">
     <div class="vene-top">
+    
+    
         <div class="vene-title">
+        <div style="width: 30vh;height: 30vh;overflow:hidden;display:Flex;position:relative;justify-content:center;align-items:center;overflow:hidden;">
+        <img src="/assets/칸채우기.svg" style="width:40vh;height: 40vh;position:Absolute;">
+        </div>
             <h1>멀고도 가까운 성병 알아보기</h1>
         </div>
         <div class=vene-subtitle>
