--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <div class="main-1">
     <div class="main-1-container">
         <div class="main-1-title">
-        <img src='/assets/성교할래.svg'>
+        <img src='/assets/메인보드글자.svg'>
             <%# <h1>성교</h1><h1 style="color: rgb(255, 255, 214)">할래</h1> %>
              <%# <img src="/assets/성교한자.svg"> %>
         </div>
@@ -16,7 +16,7 @@
             여러분과 같은 사람을 만나고<br>
             서로 알아갈 수 있는 기회입니다!<br>
         </h2>
-        <img src="/assets/공감start.png" alt="" style="width: 40vh;height: auto;margin-top:2vh;cursor:pointer" onclick="movequiz()">
+        <img src="/assets/공감start.png" alt="" style="width: 35vh;height: 40vh;margin-top:2vh;cursor:pointer" onclick="movequiz()">
         <img src="/assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:relative;top:-3vh;">
         <img src="/assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:relative;top: -6vh">
     </div>
@@ -38,21 +38,21 @@
     <div class="main-2-container">
         <div class="main-2-container-circle">
             <div class="circle">
-                <img src="http://res.heraldm.com/content/image/2014/08/12/20140812001137_0.jpg">
+                <img src="/assets/재미없어.gif">
             </div>
             <h1>밀려오는 지루함;;</h1>
             <h2>언제 끝나는 걸까?</h2>
         </div>
         <div class="main-2-container-circle">
             <div class="circle">
-                <img src="http://mblogthumb2.phinf.naver.net/MjAxNzA1MDRfNjIg/MDAxNDkzODgyMTI2NDUw.rF08VjzErYSKgPZjHuiGluUWURbbopMBlLc9--XLc-Ag.AgOlfKrTjBdTSeNIm97m57vePNoX3YviXXxjKFNwuE4g.JPEG.comandsoft/%EB%B3%B4%EC%8A%A4%EB%B2%A0%EC%9D%B4%EB%B9%84_%EC%96%B4%EB%A6%B0%EC%9D%B4%EC%98%81%ED%99%94_1.jpg?type=w800">
+                <img src="/assets/fuck.png">
             </div>
             <h1>말도 안되는 내용?!</h1>
             <h2>저걸 가르쳐서 무슨 소용?</h2>
         </div>
         <div class="main-2-container-circle">
             <div class="circle">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPRqvQUnNZLk_Il6S1y9xCC7qLD60qAF823b_GPsS13ROdJJcI">
+                <img src="/assets/부끄러워.jpg">
             </div>
             <h1>이미 다 아는걸...</h1>
             <h2>내가 정말 궁금한건 달라!</h2>
@@ -115,7 +115,7 @@
 
 
 <div class="main-4-0">
-
+<img src="/assets/빈칸채우기.svg" style="width: 70vh;height: 45vh;">
 </div>
 
 <div class="main-4-1">
