--- a/app/views/education/venereal.html.erb
+++ b/app/views/education/venereal.html.erb
@@ -1,5 +1,8 @@
 <div class="top-button" onclick="movetop()">
+    <img src="/assets/up.svg"  style="width: 6vh;height:6vh;z-index:1000;">
     <h1 style=" font-weight:400; top:-2vh; position:relative;">Top</h1>
+</div>
+
     <div class="vene-top">
     
     
