--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <div class="main-1">
     <div class="main-1-container">
         <div class="main-1-title">
-        <img src='/assets/메인보드글자.svg'>
+            <img src='/assets/메인보드글자.svg'>
             <%# <h1>성교</h1><h1 style="color: rgb(255, 255, 214)">할래</h1> %>
              <%# <img src="/assets/성교한자.svg"> %>
         </div>
@@ -14,9 +14,9 @@
         <h2>가끔씩 이렇지 않아? 나만 그래? 라고<br>
             친구들과 성과 관련한 이야기를 하진 않나요?<br>
             여러분과 같은 사람을 만나고<br>
-            서로 알아갈 수 있는 기회입니다!<br>
+            서로 알아갈 수 있는 기회입니다!
         </h2>
-        <img src="/assets/공감start.png" alt="" style="width: 35vh;height: 40vh;margin-top:2vh;cursor:pointer" onclick="movequiz()">
+        <img src="/assets/공감start.png" alt="" style="width: 35vh;position:relative;height: 31vh;margin-top:2vh;cursor:pointer" onclick="movequiz()">
         <img src="/assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:relative;top:-3vh;">
         <img src="/assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:relative;top: -6vh">
     </div>
@@ -115,7 +115,7 @@
 
 
 <div class="main-4-0">
-<img src="/assets/빈칸채우기.svg" style="width: 70vh;height: 45vh;">
+<img src="/assets/빈칸채우기.svg" style="width: 60vh;height: 37vh;">
 </div>
 
 <div class="main-4-1">
