--- a/app/views/education/_reference3.html.erb
+++ b/app/views/education/_reference3.html.erb
@@ -4,7 +4,7 @@
     </div>
 
     <div class="contents">
-        <a href="https://youtu.be/8932LF2TqVE"> <div class="ref-1 grid-item"><img src="/images/너나나나자위.png">
+        <a href="https://youtu.be/8932LF2TqVE"> <div class="ref-1 grid-item"><img src="">
         <h2>여성들의 자위는 <br> 나쁜 것인가요?</h2></div> </a>
 
         <a href="https://youtu.be/8932LF2TqVE"><div class="ref-2 grid-item"><img src="">
