--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -1,14 +1,16 @@
 .reference {
+    position: absolute;
+    top: 0;
+    left: 0;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #1e1e1e;
-    width :100%;
+    width :80%;
     height:100%;
     position: fixed;
-    color: white;
-    text-decoration-color: white;
+    margin-left: 20%;
 }
 
 .reference:hover{
@@ -19,9 +21,11 @@
     -ms-transition: background-color 1000ms linear;
     transition: background-color 1000ms linear;
     position: fixed;
-    color: white;
 }
 
+.reference h1 {
+    color:white;
+}
 
 .contents {
     display: grid;
@@ -54,6 +58,6 @@
 
 .bottom {
     color: white;
-    font-size: 11px;
+    font-size: 0.4%;
     padding-top: 5%;
 }
