--- a/app/views/education/contraception.html.erb
+++ b/app/views/education/contraception.html.erb
@@ -17,8 +17,8 @@
         </div>
 
         <div class="vene-select">
-            <%=link_to '성별로 보기',education_go2_path , remote: true, :class=>"render-vene1", :id=>"render1" %>
-            <%=link_to '이름별로 보기',education_go3_path , remote: true, :class=>"render-vene1", :d => "render2" %>
+            <%=link_to '성(性)별로 보기',education_go2_path , remote: true, :class=>"render-vene1", :id=>"render1" %>
+            <%=link_to '순서대로 보기',education_go3_path , remote: true, :class=>"render-vene1", :d => "render2" %>
            
            
         </div>
