--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,9 +16,9 @@
             여러분과 같은 사람을 만나고<br>
             서로 알아갈 수 있는 기회입니다!
         </h2>
-        <img src="/assets/공감start.png" alt="" style="width: 35vh;position:relative;height: 31vh;margin-top:2vh;cursor:pointer" onclick="movequiz()">
-        <img src="/assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:relative;top:-3vh;">
-        <img src="/assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:relative;top: -6vh">
+        <img src="/assets/공감start.png" alt="" style="width: 35vh;position:Absolute;top:52vh;height: 26vh;margin-top:2vh;cursor:pointer" onclick="movequiz()">
+        <img src="/assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:absolute;top:77vh">
+        <img src="/assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:absolute;top: 80vh">
     </div>
 </div>
 
@@ -45,7 +45,7 @@
         </div>
         <div class="main-2-container-circle">
             <div class="circle">
-                <img src="/assets/fuck.png">
+                <img src="/assets/fuck.png" style="width: 110%;">
             </div>
             <h1>말도 안되는 내용?!</h1>
             <h2>저걸 가르쳐서 무슨 소용?</h2>
