--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
             <h1 style="top:-2.3vh">Community</h1>
           </a>
            <a class="nav-menu" href="/counsel/index" >
-            <img src="/assets/counsel.svg" style="top:-0.2vh;height:5.2vh">
+            <img src="/assets/customer.svg" style="top:-0.2vh;height:5.2vh">
             <h1 style="top:-1.4vh">Counsel</h1>
           </a>
           <% if user_signed_in? %>
