--- a/app/views/education/_symtom1.html.erb
+++ b/app/views/education/_symtom1.html.erb
@@ -24,39 +24,48 @@
                 <h2 class="vene1"  style="margin-top:0;"> 성공률 : 82-98% | 하지만 제대로 된 사용법을 익히지 않는 경우 성공률 편차가 심함</h2>
                 <h2 style="font-size: 3.5vh;">사용 순서</h2>
                 <div style="width:7vh;border-bottom:0.2vh solid grey;text-align:center;"></div>
-            <div id= "stage" class="color-blue">
-                <h1 class="vene1">콘돔을 뜯는다!</h2>
+            <div id= "stage" class="color-blue stage1">
+                <h1 class="vene1">1. 콘돔을 뜯는다!</h2>
                 <h2 class="vene1">반드시 손으로 뜯을 것</h2>
                 <h3 class="vene1">이빨이나 다른 것을 이용하면 콘돔이 찢어질 확률이 높다!</h2>
             
              </div>
-               <div id= "stage" class="color-blue">
-                <h1 class="vene1">콘돔 말린 부분 확인!</h2>
-                <h2 class="vene1">강제로 피려하지 말 것</h2>
+                <img src="/assets/arrow5.svg" alt="" style="width:6vh;height: 6vh;">
+               <div id="stage" class="color-blue stage2">
+                <h1 class="vene1">2. 콘돔 말린 부분 확인!</h2>
+                <h2 class="vene1"> 강하게 당기려 하지 말 것</h2>
                 <h3 class="vene1">그렇지 않으면 착용 전에 찢어지거나 느슨해질 수 있다!</h2>
                
             </div>
-               <div id= "stage" class="color-blue">
-                <h1 class="vene1">정액받이를 손끝으로 집기!</h2>
-                <h2 class="vene1">정액이 나올 곳의 기압 조절</h2>
+               <img src="/assets/arrow5.svg" alt="" style="width:6vh;height: 6vh;">
+               <div id= "stage" class="color-blue stage3">
+                <h1 class="vene1">3. 정액받이를 손끝으로 집기!</h2>
+                <h2 class="vene1">정액받이 부분의 기압 조절</h2>
                 <h3 class="vene1">그러지 않으면 사정중 콘돔이 기압차로 터지기 쉽다!</h2>
                
             </div>
-             <div id= "stage" class="color-blue">
-                <h1 class="vene1">사정하자 마자 제거!</h2>
+               <img src="/assets/arrow5.svg" alt="" style="width:6vh;height: 6vh;">
+             <div id= "stage" class="color-blue stage4">
+                <h1 class="vene1">4. 사정하자 마자 제거!</h2>
                 <h2 class="vene1">발기가 풀리기 전에 끝부분을 잡고 뽑기</h2>
                 <h3 class="vene1">정액이 콘돔과 성기 사이로 흘러나올 수 있다!</h2>
                
             </div>
-
-               
-            <h2 class="vene1">	주의사항 
-            ①	콘돔의 유통기간을 확인한다. (유통기간이 지날 시 찢어질 우려) 
-            ②	포경수술을 안 한 경우 귀두부위를 젖힌 다음 콘돔을 씌워야 함. 
-            ③	사정 직전에만 콘돔을 이용하지 말고, 질내 삽입 전에 착용해야 함 쿠퍼액에도 정자 있음, 조절의 어려움 
-            ④	콘돔에 구멍이 생길 수 있으니 기름성분 윤활제 쓰면 안됨 ex. 베이비오일, 바셀린
-                ⑤	각종 알러지 1.	라텍스 알러지 → 폴리우레탄 또는 천연고무 재질로 바꿔볼 것 2.	윤활액 및 살정제 → 다른 콘돔 써볼 것 3.	유통기한 지난 경우 → 쓰지 마세요</h2>
-               
+            <h2 style="font-size: 3.5vh;margin-top: 10vh;">주 의 사 항</h2>
+                <div style="width:7vh;border-bottom:0.2vh solid grey;text-align:center;"></div>
+            <div class="warning">
+            <div>
+            <img src="/assets/warning.svg">
+            <h1 style="margin-top: -5vh;color:yellow;font-weighT: 400">Warning!</h1>
+            </div>
+                <div style="height: 4vh;width:40vh;display:Flex;flex-direction:column;align-items:center">   
+                    <h2 class="vene1" style="color:yellow; font-size:2.5vh;font-weight:400">유통기한 확인 필수</h2>
+                    <h2 class="vene1" style="color:yellow; font-size:2.8vh;margin-top:-1.5vh;font-weight:400">오래된 것은 찢어질 수 있다!</h2>
+                    <%# <h2 class="vene1"> ②	포경수술을 안했다면, 귀두부위를 젖힌 다음 콘돔을 씌우자! </h2>
+                    <h2 class="vene1"> ③	사정 직전에 분비되는 액에도 정자가 있으니 조심! </h2>
+                    <h2 class="vene1"> ④    베이비오일, 바셀린 같은 윤활제는 콘돔을 녹이니 절대 금지!</h2>
+                    <h2 class="vene1"> ⑤    콘돔도 알러지가 있다! 라텍스 알러지, 윤활액 알러지 확인!</h2> %>
+               </div>
             </div>
         </div>
 <%# 
