--- a/app/views/education/venereal.html.erb
+++ b/app/views/education/venereal.html.erb
@@ -2,7 +2,7 @@
     <img src="/assets/up.svg"  style="width: 6vh;height:6vh;z-index:1000;">
     <h1 style=" font-weight:400; top:-2vh; position:relative;">Top</h1>
 </div>
-
+    <div class="venereal">
     <div class="vene-top">
     
     
@@ -24,7 +24,7 @@
            
         </div>
     </div>
-      
+    </div>
      
     
 </div> 
